Bugzilla bug 186547: fixed compiler warnings.  r=wtc.